--- a/index.html
+++ b/index.html
@@ -1,66 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafimammadov's CV</title>
 </head>
 <body>
 
-<h1>Rafimammadov's CV</h1>
+    <!-- PROFILE SECTION -->
+    <section>
+        <h1>Profile</h1>
+        <p>I am a passionate Computer Science student at UFAZ University in Azerbaijan, dedicated to developing my skills and knowledge in technology. I have a strong foundation in computer science concepts and a desire to contribute to innovative solutions in the ever-evolving world of technology.</p>
+    </section>
 
-<h2>Contact Information</h2>
-<ul>
-    <li>Phone: +994 50 662 57 84</li>
-    <li>Email: rafimammadov0@gmail.com</li>
-    <li>Location: Baku, Azerbaijan</li>
-</ul>
+    <!-- EDUCATION SECTION -->
+    <section>
+        <h2>Education</h2>
+        <p>Special Skills: Bachelor<br>
+        UFAZ University<br>
+        2022 - Present<br>
+        As a second-year Computer Science student at the University of Foreign Affairs and Humanities (UFAZ) in Azerbaijan, I am passionate about technology and committed to developing my skills and knowledge in the field.</p>
+    </section>
 
-<h2>Contact Profile</h2>
-<p>I am a passionate Computer Science student at UFAZ University in Azerbaijan, dedicated to developing my skills and knowledge in technology. I have a strong foundation in computer science concepts and a desire to contribute to innovative solutions in the ever-evolving world of technology.</p>
+    <!-- LANGUAGE SECTION -->
+    <section>
+        <h2>Languages</h2>
+        <ul>
+            <li>English</li>
+            <li>Azerbaijani</li>
+            <li>Turkish</li>
+            <li>French</li>
+            <li>Russian</li>
+        </ul>
+    </section>
 
-<h2>Skills</h2>
-<ul>
-    <li>Communication</li>
-    <li>Problem-Solving</li>
-    <li>Decision-Making</li>
-    <li>Time Management</li>
-    <li>C - Advanced</li>
-    <li>Python - Intermediate</li>
-    <li>C++ - Intermediate</li>
-    <li>HTML - Intermediate</li>
-    <li>CSS - Basics</li>
-    <li>JavaScript - Basics</li>
-</ul>
+    <!-- CONTACT SECTION -->
+    <section>
+        <h2>Contact Me</h2>
+        <ul>
+            <li>Phone: +994 50 662 57 84</li>
+            <li>Email: rafimammadov0@gmail.com</li>
+            <li>Location: Baku, Azerbaijan</li>
+        </ul>
+    </section>
 
-<h2>Education</h2>
-<p>Special Skills: Bachelor</p>
-<p>UFAZ University</p>
-<p>2022 - Present</p>
-<p>As a second-year Computer Science student at the University of Foreign Affairs and Humanities (UFAZ) in Azerbaijan, I am passionate about technology and committed to developing my skills and knowledge in the field.</p>
+    <!-- COMPUTER SKILLS SECTION -->
+    <section>
+        <h2>Computer Skills</h2>
+        <ul>
+            <li>C - Advanced</li>
+            <li>Python - Intermediate</li>
+            <li>C++ - Intermediate</li>
+            <li>HTML - Intermediate</li>
+            <li>CSS - Basics</li>
+            <li>JavaScript - Basics</li>
+        </ul>
+    </section>
 
-<h2>Languages</h2>
-<ul>
-    <li>English</li>
-    <li>Azerbaijani</li>
-    <li>Turkish</li>
-    <li>French</li>
-    <li>Russian</li>
-</ul>
+    <!-- SOFT SKILLS SECTION -->
+    <section>
+        <h2>Soft Skills</h2>
+        <ul>
+            <li>Communication</li>
+            <li>Problem-Solving</li>
+            <li>Decision-Making</li>
+            <li>Time Management</li>
+        </ul>
+    </section>
 
-<h2>Achievements</h2>
-<ul>
-    <li>GPA: 98/100</li>
-    <li>Republican Math Olympiad 2018 - High achievement</li>
-    <li>Republican Math Olympiad 2019 - High achievement</li>
-    <li>Distinction Diploma in High School Exams (SEC) - SEC score: 638</li>
-    <li>The 2023 ICPC Azerbaijan Qualification - High achievement</li>
-</ul>
-
-<h2>Hobbies</h2>
-<ul>
-    <li>Playing chess and solving puzzle games</li>
-    <li>Reading books and articles</li>
-    <li>Traveling and meeting new people</li>
-</ul>
+    <!-- HOBBIES AND INTERESTS SECTION -->
+    <section>
+        <h2>Hobbies and Interests</h2>
+        <ul>
+            <li>Playing chess and solving puzzle games</li>
+            <li>Reading books and articles</li>
+            <li>Traveling and meeting new people</li>
+        </ul>
+    </section>
 
 </body>
 </html>
